<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_margin="30dp"
            android:layout_height="wrap_content"
            android:text="@string/login_screen"
            android:layout_weight="1"
            android:textSize="50sp"
            android:textAlignment="center"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/your_login"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_margin="30dp"
            android:layout_height="wrap_content"
            android:text = "@string/login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_margin="30dp"
            android:layout_height="wrap_content"
            android:text="@string/studet_all_teacher_password_1"
            android:textStyle="italic"
            android:textAlignment="center"
            android:textSize="20sp"
            />
    </LinearLayout>

</FrameLayout>